<resources>
    <string name="app_name" translatable="false">Every entertainment</string>

    <!-- storage tab's names -->
    <string name="sd_card">SD Card</string>
    <string name="internal_storage">Internal storage</string>

    <!--  navigation buttons  -->
    <string name="nav_browser">Browse</string>
    <string name="nav_storage">Storage</string>
    <string name="nav_music">Music</string>
    <string name="nav_gallery">Gallery</string>

    <!--  app menu -->
    <string name="app_menu_settings">Settings</string>
    <string name="app_menu_sort">Sort by</string>
    <string name="sort_A_to_z">Name from A to Z</string>
    <string name="sort_size_small_to_large">Size from small to large</string>
    <string name="sort_date_old_to_new">Date from old to new</string>

    <!--  list item menu  -->
    <string name="move_to">Move to</string>
    <string name="copy_to">Copy to</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="select_all">Select all</string>
    <string name="dismiss">Unselect all</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="create_folder">Create folder</string>

    <!-- alert dialog strings -->
    <string name="please_select_your_destination">Please select your destination:</string>

    <!-- move or copy intent -->
    <string name="ok_alert_dialog">OK</string>
    <string name="cancel_alert_dialog">Cancel</string>

    <!-- progress dialog title -->
    <string name="progress_dialog_title_copy">Copying files</string>
    <string name="progress_dialog_title_move">Moving files</string>

    <!-- folders and files quantity -->
    <string name="folders_files_quantity">folders and files</string>

    <!-- create folder alert dialog -->
    <string name="folder_name">Folder name</string>

    <!-- search view -->
    <string name="search_folders">Search folders</string>

    <!-- info alert dialog -->
    <string name="type">Type: </string>
    <string name="size">Size: </string>
    <string name="contents">Contents: </string>
    <string name="modified">Modified date: </string>
    <string name="path">Path: </string>
    <string name="hidden">Hidden: </string>
    <string name="ok">OK</string>
    <string name="folder"> Folder</string>
    <string name="file"> File</string>
    <string name="folders">Folders:</string>
    <string name="files">Files:</string>
    <string name="hidden_no">No</string>
    <string name="hidden_yes">Yes</string>

    <string name="cannot_rename">Name can\'t start with (.)</string>
    <string name="history_browser">History</string>
    <string name="check_internet">No internet connection, please check your internet connection</string>
    <string name="open_file_error">No apps can open this type of files</string>
    <string name="music_fragment_tab_albums">albums</string>
    <string name="music_fragment_tab_artists">artists</string>
    <string name="music_fragment_tab_all_music">all song</string>
    <string name="shuffle_off">Shuffle is off</string>
    <string name="shuffle_on">Shuffle is on</string>
    <string name="repeat_off">Repeat is off</string>
    <string name="repeat_on">Repeat is on</string>

    <!-- notification -->
    <string name="media_player_notification_desc">These settings are for music player notification only</string>

    <string name="videos">Videos</string>
    <string name="Images">Images</string>
    <string name="progress_dialog_title_delete">Deleting files</string>
    <string name="empty_directory">Empty directory</string>
    <string name="move_or_copy_toolbar_title">Select your destination: </string>
    <string name="sort_artist_a_to_z">Artist from A to Z</string>
    <string name="sort_album_a_to_z">Album from A to Z</string>
    <string name="sort_count_short_to_long">Songs count from small to large</string>
    <string name="reverse_sort">Reverse sort</string>
    <string name="sort_duration_short_to_long">Song duration from short to long</string>
    <string name="file_already_hidden">File is already hidden</string>
    <string name="name_alredy_exist">This name already used, try different name.</string>
    <string name="folder_created">Folder created successfully</string>
    <string name="play_list">Play list</string>

    <!-- Preference activity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_settings_header">General settings</string>
    <string name="files_settings_header">Files and folders</string>

    <!-- language Preferences -->
    <string name="app_language">Language</string>
    <string name="languages_dialog_title">Select language:</string>

    <!-- hidden files and folders Preferences -->
    <string name="show_hidden_title">Show hidden files and folders</string>
    <string name="show_hidden_on">On</string>
    <string name="show_hidden_off">Off</string>
    <string name="restart_after_change_setting">Please note that app will restart immediately after change setting</string>
    <string name="about">About</string>
    <string name="version_name">Version: 1.7</string>
    <string name="rate">Rate us</string>
    <string name="rate_summery">Your rate and review help us better</string>
    <string name="bug_report">Report bugs</string>
    <string name="bug_report_summery">Some information about the device will be included in the report to help fix bugs</string>
    <string name="choose_email_client" translatable="false">Choose email client</string>
    <string name="no_contents">Sorry, no content</string>
    <string name="no_sd_card">No SD card mounted</string>
    <string name="back_pressed">press back again to exit</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
